# compose-glide

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
glide-text2im/glide_text2im/: download.py
notebooks/: benchmark.ipynb  demo.ipynb
src/compose_glide/: __init__.py  model.py
src/compose_glide/dataset/: celeba.py
src/scripts/: benchmark.py  fine_tune.py  imagen.py  prepare.py
