[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "compose-glide"
version = "0.1.0"
description = "Text-to-image generation using enhanced GLIDE models"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["glide", "text-to-image", "deep learning", "ai", "diffusion models"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "torch>=1.9.0",
    "torchvision>=0.10.0",
    "numpy>=1.19.0",
    "pillow>=8.0.0",
    "tqdm>=4.62.0",
    "matplotlib>=3.4.0",
    "transformers>=4.11.0",
    "jupyter>=1.0.0",
    "scipy",
    "kagglehub",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/compose-glide"
"Bug Tracker" = "https://github.com/yourusername/compose-glide/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]